[package]
name = "wasi-crypto"
version = "0.1.15"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Experimental implementation of the WASI cryptography APIs"
documentation = "https://docs.rs/wasi-crypto"
license-file = "LICENSE"
readme = "README.md"
categories = ["wasm", "cryptography"]
keywords = ["webassembly", "wasm", "wasi", "crypto"]
repository = "https://github.com/wasm-crypto/wasi-crypto-host-functions"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
rkyv = { version = "0.8", features = ["std"] }
boring = { version = "4.19.0" }
byteorder = "1.5.0"
chacha20poly1305 = "0.10.1"
derivative = "2.2.0"
ed25519-compact = { version = "2.2.0", features = ["x25519"] }
hkdf = "0.12.4"
hmac = "0.12.1"
k256 = { version = "0.13.4", features = ["ecdsa", "std", "pkcs8", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std", "pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["ecdsa", "std", "pkcs8", "pem"] }
pqcrypto-traits = { version = "0.3.5", optional = true }
pqcrypto-kyber = { version = "0.8.1", optional = true }

rand_core = { version = "0.6.4", features = [
    "getrandom",
], package = "rand_core" }
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
xoodyak = "0.8.4"
zeroize = { version = "1.8.2", features = ["derive"] }

[features]
default = ["pqcrypto"]
pqcrypto = ["pqcrypto-traits", "pqcrypto-kyber"]

[badges]
maintenance = { status = "experimental" }
